# spirit_edit_core

./: Cargo.toml  todo.md
src/: gltf_models.rs  lib.rs
src/doodads/: doodad.rs  doodad_manifest.rs  material_overrides.rs  mod.rs  picking.rs  rotate.rs
src/placement/: mod.rs
src/prefabs/: mod.rs  prefab_definitions.rs  prefab_file.rs
src/zones/: mod.rs  zone_file.rs
