[package]
name = "spirit_edit_core"
description = "A utility library for spirit editor"
version = "0.14.15" 
edition = "2021"
authors = [ "ethereumdegen" ]
license = "MIT"
 
keywords = ["bevy", "editor"]
categories = ["game-development", "gui", "visualization"]
exclude = ["assets"]

 
 



[dependencies]
 
 bevy = "0.14.1"
bevy_mod_raycast = "0.18.0"

bevy_egui = "0.28"
bevy_mod_picking = "0.20.0" 
 

 # need to keep this updated  !  a pain .. 
 bevy_clay_tiles = "0.14.17"

 #bevy_clay_tiles =  {path="../bevy_clay_tiles"}

serde = { version = "1", features = ["derive"] }
  

 bevy_common_assets = {version="0.11.0", features= ["ron"]}
 
  
ron = "0.8.1"

rand = "0.8"
 