[package]
name = "spirit_edit_core"
description = "A utility library for spirit editor"
version = "0.15.4" 
edition = "2021"
authors = [ "ethereumdegen" ]
license = "MIT"
 
keywords = ["bevy", "editor"]
categories = ["game-development", "gui", "visualization"]
exclude = ["assets"]

 
 



[dependencies]
 
bevy = "0.15.0"

#remove me ? 
bevy_egui = "0.31"

# these are upstreamed IN bevy now ? 
#bevy_mod_raycast = "0.18.0"
#bevy_mod_picking = "0.20.0" 
 
 
 bevy_clay_tiles = "0.15.0"
 
serde = { version = "1", features = ["derive"] }
  

 bevy_common_assets = {version="0.12.0", features= ["ron"]}
 
  
ron = "0.8.1"

rand = "0.8"
 
